tests/should_fail/syntax_let_redeclare.nv
module main

// SHOULD FAIL: let binding shadows/reinstantiates existing symbol
let x = 10
let x = 20
println(x)
